syntax = "proto3";

package oracle;

service Oracle {
	rpc AskDeepThrough(AskDeepThroughRequest) returns (AskDeepThroughRespnse) {}
}

message AskDeepThroughRequest {
	string data = 1;
}

message AskDeepThroughRespnse {
	string data = 1;
}
